--- a/src/components/Category.scss
+++ b/src/components/Category.scss
@@ -1,4 +1,4 @@
-.tag {
+.category {
     background-color: rgba(211, 207, 207, 0.979);
     height: 70%;
     margin: 0px 5px 0px 5px;
